--- a/我再也不会把孩子送去学校/1.前言.md
+++ b/我再也不会把孩子送去学校/1.前言.md
@@ -101,7 +101,7 @@
 
 优化教育的问题在于，理想情况下，我们应该在今天进行渐进修正，并衡量30-50年后的结果。这就是为什么有效的优化教育必须依赖于从学习理论推导出来的模型。幸运的是，这些模型生成了一个相对简单的画面。大脑已经配备了所有的工具，可以轻松地完成我们今天认为不可能完成的事情。
 
-## Fostering diversity
+## 培养多样性
 
 在家上学为自由学习提供了良好的基础。人们经常抱怨在家上学的人和不上学的人很奇怪，或者社交能力差。这种抱怨忽略了一个事实，即怪异的反义词是同质化的、没有面孔的、无趣的。建立在各种教育和知识基础上的社会的反面是朝鲜。为了健康的多样性，我们也需要朝鲜的例子。至少要珍惜我们的自由，学会一两件让人们和社会幸福的事情。
 
