--- a/我再也不会把孩子送去学校/1.前言.md
+++ b/我再也不会把孩子送去学校/1.前言.md
@@ -32,17 +32,17 @@
 
 ## 执行概要
 
-这本书太长了。您可以通过[增量阅读](https://supermemo.guru/wiki/Incremental_reading)来最好地阅读它。如果这还是太多，去[总结](https://supermemo.guru/wiki/Summary)，并遵循链接去阅读你不同意的东西。最终的结论是，上学削弱了年轻一代的大脑潜能。我们可以做得更好。不是20%更好，不是200%更好，而是更多!我在文章中涵盖了一些数字。
+这本书太长了。您可以通过[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)来最好地阅读它。如果这还是太多，去[总结](https://supermemo.guru/wiki/Summary)，并遵循链接去阅读你不同意的东西。最终的结论是，上学削弱了年轻一代的大脑潜能。我们可以做得更好。不是20%更好，不是200%更好，而是更多!我在文章中涵盖了一些数字。
 
 ## 孩子不是微型的成年人
 
 在设计完善的教育生态系统时，必须牢记的重要一点是，儿童大脑的工作原理与成年人的大脑完全不同。我们需要让孩子们自由，永远不要忘记我们的大脑是不同的，我们的记忆扭曲了过去，孩子们更了解自己的大脑!
 
 
-解决成年人不能理解孩子大脑问题的关键在于理解[学习动力](https://supermemo.guru/wiki/Learn_drive)的力量和[学习基本定律](https://supermemo.guru/wiki/Fundamental_law_of_learning)的重要性。简单来说，它可以用严格的科学术语来说明[快乐是有效学习的必然结果](https://supermemo.guru/wiki/Pleasure_of_learning)。
+解决成年人不能理解孩子大脑问题的关键在于理解[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的力量和[学习基本定律](https://supermemo.guru/wiki/Fundamental_law_of_learning)的重要性。简单来说，它可以用严格的科学术语来说明[快乐是有效学习的必然结果](https://supermemo.guru/wiki/Pleasure_of_learning)。
 
 
-我们需要为孩子提供一个蓬勃发展的[学习动力](https://supermemo.guru/wiki/Learn_drive)的条件，这是[自主学习](https://supermemo.guru/wiki/Self-directed_learning)的基础。[自由学习](https://supermemo.guru/wiki/Free_learning)是以学习技能为基础的。在学校学习是一个被动的过程。这种被动阻碍了有效学习中使用的关键技能和习惯。自由在决策中是必不可少的，这是发展必要技能的起点。
+我们需要为孩子提供一个蓬勃发展[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的条件，这是[自主学习](https://supermemo.guru/wiki/Self-directed_learning)的基础。[自由学习](https://supermemo.guru/wiki/Free_learning)是以学习技能为基础的。在学校学习是一个被动的过程。这种被动阻碍了有效学习中使用的关键技能和习惯。自由在决策中是必不可少的，这是发展必要技能的起点。
 
 ## 学习基本定律
 
@@ -54,7 +54,7 @@
 
 ## 给我们未来的自己的信息
 
-教育的最大效果，不是伟大的学习，而是使人对进一步学习丧失兴趣的终生影响。学校没有教孩子如何学习，反而使孩子们讨厌学校。然而，学校结束了，一个更糟糕的副作用仍然存在:讨厌学习。幸运的是，人类的大脑天生[渴望学习](https://supermemo.guru/wiki/Learn_drive)，大多数人在十年内就能恢复。恢复后，记忆会掩饰过去，大人将自己的成功归功于教育。这使恶性循环长期存在。成年人不理解孩子。他们甚至不理解自己的大脑，从多年前他们自己还是孩子的时候。记忆无法向未来发送准确的信息。参见:[学校抑制学习动力](https://supermemo.guru/wiki/Schools_suppress_the_learn_drive)
+教育的最大效果，不是伟大的学习，而是使人对进一步学习丧失兴趣的终生影响。学校没有教孩子如何学习，反而使孩子们讨厌学校。然而，学校结束了，一个更糟糕的副作用仍然存在:讨厌学习。幸运的是，人类的大脑天生[渴望学习](https://supermemo.guru/wiki/Learn_drive)，大多数人在十年内就能恢复。恢复后，记忆会掩饰过去，大人将自己的成功归功于教育。这使恶性循环长期存在。成年人不理解孩子。他们甚至不理解自己的大脑，从多年前他们自己还是孩子的时候。记忆无法向未来发送准确的信息。参见:[学校抑制学习内驱力](https://supermemo.guru/wiki/Schools_suppress_the_learn_drive)
 
 ## 早期教育的危险
 
@@ -80,7 +80,7 @@
 
 ## 何时学校是一种眷顾
 
-学校可以是一种眷顾。在后埃博拉时代的利比里亚，在里约热内卢贫民窟的一个小村庄，在波兰的一个10户人家的村庄，在后塔利班时代的阿富汗，在玛萨雷(Mathare)贫民窟，在贫穷的移民郊区，学校是一种眷顾。它可能是一种摆脱贫困、暴力或虐待的方式。这也许是一条通向光明未来的道路。在我附近，孩子们不上学就吸毒。在15公里外的一个村子里，他们的主要娱乐活动是在当地商店前喝啤酒。从这个意义上说，学校是在保护孩子免受不作为、迟钝的社区或病态家庭的有害影响。
+学校可以是一种眷顾。在后埃博拉时代的利比里亚，在里约热内卢贫民窟的一个小村庄，在波兰的一个 10 户人家的村庄，在后塔利班时代的阿富汗，在玛萨雷(Mathare)贫民窟，在贫穷的移民郊区，学校是一种眷顾。它可能是一种摆脱贫困、暴力或虐待的方式。这也许是一条通向光明未来的道路。在我附近，孩子们不上学就吸毒。在 15 公里外的一个村子里，他们的主要娱乐活动是在当地商店前喝啤酒。从这个意义上说，学校是在保护孩子免受不作为、迟钝的社区或病态家庭的有害影响。
 
 然而，学校只有在少数困难的环境中，特别是在学校系统发展的早期阶段，才是一种眷顾。在他们成为眷顾之后，学校变得普及，然后是强制性的。然后他们演变成一种压迫的工具，只在一个方向上优化:更多的压力，以获得更好的成绩。所有这些压迫都是出于无知。
 
@@ -93,13 +93,13 @@
 
 如果把分数和考试成绩用于优化学习，我们会得出一些荒谬的结论，例如:通宵学习很好，晚上喝咖啡很好，[死记硬背](https://supermemo.guru/wiki/Cramming)比学习更好，[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)无效，以及其他同样荒谬的结论。
 
-为了改善学校教育，我们增加了更多的材料，提高了标准。这将孩子推向短期记忆，更多的[家庭作业](https://supermemo.guru/wiki/Homework)，更少的[睡眠](https://supermemo.guru/wiki/Science_of_sleep)，更少的锻炼，更少的[乐趣](https://supermemo.guru/wiki/Pleasure_of_learning)，更努力抑制[学习动力](https://supermemo.guru/wiki/Learn_drive)，更大的[抑郁和行为障碍](https://supermemo.guru/wiki/Learned_helplessness_vs._learn_drive)的风险的方向。我们把自己逼到一个角落里!这是不幸社会的一个角落!
+为了改善学校教育，我们增加了更多的材料，提高了标准。这将孩子推向短期记忆，更多的[家庭作业](https://supermemo.guru/wiki/Homework)，更少的[睡眠](https://supermemo.guru/wiki/Science_of_sleep)，更少的锻炼，更少的[乐趣](https://supermemo.guru/wiki/Pleasure_of_learning)，更努力抑制[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，更大的[抑郁和行为障碍](https://supermemo.guru/wiki/Learned_helplessness_vs._learn_drive)的风险的方向。我们把自己逼到一个角落里!这是不幸社会的一个角落!
 
 给教育增加容量和速度来打败分数就像希望给[快速阅读](https://supermemo.guru/wiki/Speed-reading)增速会带来更好的学习。我们以实际知识为代价提高分数。更糟糕的是，我们在提高分数的同时，也严重削弱了人类的创造力和解决问题的能力。
 
 阅读、处理信息或学习都有一个最佳速度，而且这个速度因人而异。在[自由学习](https://supermemo.guru/wiki/Free_learning)中很容易达到最佳速度，因为自由学习中需要自我调节。
 
-优化教育的问题在于，理想情况下，我们应该在今天进行渐进修正，并衡量30-50年后的结果。这就是为什么有效的优化教育必须依赖于从学习理论推导出来的模型。幸运的是，这些模型生成了一个相对简单的画面。大脑已经配备了所有的工具，可以轻松地完成我们今天认为不可能完成的事情。
+优化教育的问题在于，理想情况下，我们应该在今天进行渐进修正，并衡量 30-50 年后的结果。这就是为什么有效的优化教育必须依赖于从学习理论推导出来的模型。幸运的是，这些模型生成了一个相对简单的画面。大脑已经配备了所有的工具，可以轻松地完成我们今天认为不可能完成的事情。
 
 ## 培养多样性
 
@@ -119,9 +119,9 @@
 
 柏拉图、亚里士多德和约翰·洛克已经去世好几个世纪了。[约翰·霍尔特](https://supermemo.guru/wiki/John_Holt)死了。伊万·伊里奇死了。乌里·布朗芬布伦纳死了。雷蒙德•摩尔(Raymond Moore)和罗兰•梅翰(Roland Meighan)也是如此。他们留下了激励新一代教育家的伟大著作。他们的[黄金格言](https://supermemo.guru/wiki/Gray:_What_genius_minds_think_of_schooling%3F)对于网络来说是伟大的模因，但它们对当时短期需求驱动的教育影响甚微。[自由学习](https://supermemo.guru/wiki/Free_learning)的理念遭到多数受老毛病——短视影响的人所崇拜的短期目标的抵制。
 
-[丹尼·格林伯格](https://supermemo.guru/wiki/Danny_Greenberg)和[约翰·泰勒·盖托](https://supermemo.guru/wiki/John_Taylor_Gatto)都80多岁了。[彼得·格雷](https://supermemo.guru/wiki/Peter_Gray)70多岁了。[肯·罗宾逊](https://supermemo.guru/wiki/Ken_Robinson)快七十岁了。即使是领域里新来的孩子，[Sugata Mitra](https://supermemo.guru/wiki/Sugata_Mitra)也已经60多岁了。
+[丹尼·格林伯格](https://supermemo.guru/wiki/Danny_Greenberg)和[约翰·泰勒·盖托](https://supermemo.guru/wiki/John_Taylor_Gatto)都 80 多岁了。[彼得·格雷](https://supermemo.guru/wiki/Peter_Gray) 70 多岁了。[肯·罗宾逊](https://supermemo.guru/wiki/Ken_Robinson)快 70 岁了。即使是领域里新来的孩子，[Sugata Mitra](https://supermemo.guru/wiki/Sugata_Mitra)也已经 60 多岁了。
 
-30年来，我一直在努力推广[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)和[增量阅读](https://supermemo.guru/wiki/Incremental_reading)。间隔重复现在在语言和医学科学的学生中逐渐流行起来。增量阅读仍然处于起始阶段。除了 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 之外，只有两个针对 Anki 的增量阅读插件尝试。前面的路又长又曲折。
+30 年来，我一直在努力推广[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)和[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)。间隔重复现在在语言和医学科学的学生中逐渐流行起来。渐进阅读仍然处于起始阶段。除了 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 之外，只有两个针对 Anki 的渐进阅读插件尝试。前面的路又长又曲折。
 
 尽管所有这些聪明的大脑都离开了或老化了，我们仍然偏爱一种被希特勒或斯大林赞扬和熟练运用的教育形式。我们仍然怀着一种善意的信念接受极权主义的解决办法，即它们[对社会是有益的](https://supermemo.guru/wiki/Ban_on_homeschooling#Fineman)。
 
