--- a/我再也不会把孩子送去学校/5.Effect of schooling on the learn drive.md
+++ b/我再也不会把孩子送去学校/5.Effect of schooling on the learn drive.md
@@ -1,44 +1,51 @@
-# Effect of schooling on the learn drive
+# 学校教育对学习内驱力的影响
 
-Coercive schooling suppresses the learn drive and results in diminished long-term effect of learning.
+强制性的学校教育抑制了学生的学习内驱力，降低了学生的长期学习效果。
 
-## Learn drive vs. age
+## 学习内驱力 与 年龄
 
-**The learn drive is a vital instinct that underlies the adaptive development of the central nervous system**. Babies scan their environment for elements of novelty. This is a way of searching for and detecting things that are worth learning. A baby may randomly search the space above its head until it finds a moving object. This object may be classified as novelty from which a child can learn something. At a certain stage of development, the baby will taste all objects around it in order to learn what might be edible. A kid in a room of toys will zero in on a toy that he will deem as a best satisfier of young mind's curiosity. The [learn drive](https://supermemo.guru/wiki/Learn_drive) is a powerful brain mechanism that gave babies their label of [never-ceasing perfect learning machines](https://supermemo.guru/wiki/How_baby_brain_does_not_work).
+**学习内驱力是中枢神经系统适应发展的重要本能**。婴儿在他们的环境中寻找新奇的元素。这是一种寻找和发现值得学习的东西的方法。婴儿可以在头上的空间里随机搜索，直到找到一个移动的物体。这个物体可以归类为新奇的东西，孩子可以从中学到东西。在发育的某一阶段，婴儿会品尝周围所有的东西，以便了解什么是可以吃的。一个孩子在一屋子玩具里，会把注意力集中在一件玩具上，他认为这是最能满足年轻心灵好奇心的玩具。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)是一种强大的大脑机制，给婴儿们贴上了[永不停止的完美学习机器](https://supermemo.guru/wiki/How_baby_brain_does_not_work)的标签。
+一些科学家认为，随着年龄的增长，我们自然地就失去了求新的欲望和[学习内驱力](https://supermemo.guru/wiki/Learn_drive)。这种说法是危险的错误。确实有许多下降的迹象。成年人不再对所有会动的东西着迷。他会觉得一屋子玩具很无聊。他会吐出未尝过味道，经常讨厌新菜。从来没有吃过蜗牛或甲虫的人不太可能喜欢吃蜗牛或昆虫做的菜。对于渴望知识的年轻学生来说，这个世界是很典型的，但年长者不再对这个世界感兴趣。随着年龄的增长，年长者的热情似乎在稳步下降。
 
-Some scientists believe that we innately lose our novelty seeking and our [learn drive](https://supermemo.guru/wiki/Learn_drive) with age. This claim is dangerously wrong. There are indeed many indicators of decline. An adult is no longer fascinated with all things that move. He will find a room of toys boring. He will spit out new tastes and often hate new dishes. Someone, who has never tasted a snail or a beetle, isn't likely to learn to love dishes based on snails or insects. Older people no longer show fascination with the world that is so typical to a young knowledge-hungry student. Older people's passions seem to be on a steady decline with age.
+理解学习[内驱力](https://supermemo.guru/wiki/Learn_drive)和它被认为随着时间推移而下降的机制是[优化教育](https://supermemo.guru/wiki/Optimization_of_education)的关键。
 
 Understanding the [learn drive](https://supermemo.guru/wiki/Learn_drive) and the mechanism by which it supposedly declines over time is essential for [optimizing education](https://supermemo.guru/wiki/Optimization_of_education)
 
-## Learn drive vs. knowledge
+## 学习内驱力 与 知识
 
-**The main factor that undermines the learn drive with age is the established knowledge**. There are also secondary factors such as (1) declining "attractive power" of the current knowledge and (2) the actual aging of the brain. Aging may result in a decline in neural networks, synaptic pruning, lesser mental energy, etc. Those can be largely prevented with mental hygiene and learning itself. It is possible to retain the [learn drive](https://supermemo.guru/wiki/Learn_drive) and passion for learning till the age of hundred. With healthy lifestyle, it is easier to retain vitality of the brain than it is to retain, for example, the vitality of the motor system.
+**随着年龄的增长，削弱学习内驱力的主要因素是已有的知识。**还有一些次要因素，如(1)当前知识的“吸引力”下降，(2)大脑的实际老化。老化可能会导致神经网络的老化、突触削减、精神活力的减少等。这些都可以通过精神保健和学习本身来预防。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)和热情可以一直保持到百岁。在健康的生活方式中，保持大脑的活力比保持运动系统的活力更容易。
 
-Some of novelty seeking may be part of a developmental program (e.g. baby's taste-seeking stage). However, those programs would not play an essential part of explorations we tend to induce in the young generation in the course of their education.
+一些求新欲可能是发育过程的一部分(例如，婴儿的品味探索阶段)。然而，这些过程并没有在我们试图引导年轻一代在教育课程中进行的探索中发挥重要作用。
 
-Knowledge itself is the most powerful extinguisher of the [learn drive](https://supermemo.guru/wiki/Learn_drive). It can be illustrated with our interest in a particular book. A book is interesting in the first read. We are rarely interested in reading the book for the second time. Re-reading what we know is rarely exciting. Overtime, with some help from forgetting, the book may become interesting again. A forgotten book may reactivate reward circuits via the learn drive guidance system. Once the knowledge is established, it takes away the incentive to seek new knowledge. Forgetting is also helpful in other areas, e.g. the emotional effects of a song on the radio. The difference is that music is far less about declarative memory and far more about patterns and beauty. Like a nice sunset. You do not need to forget one to love another. This is why a catchy tune can stay addictive despite multiple replays, while a jazzy or classical masterpiece can retain its appeal for life if not played ad nauseam.
+知识本身就是学习内驱力最强大的[灭火器](https://supermemo.guru/wiki/Learn_drive)。这可以用我们对某本书的兴趣来说明。一本书初读时很有趣。我们很少有兴趣把这本书再读一遍。重读我们所知道的东西很少令人兴奋。随着时间的推移，在遗忘的作用下，这本书可能会再次变得有趣。被遗忘的书可以通过学习内驱力引导系统重新激活奖励回路。一旦知识建立起来，就失去了寻找新知识的动力。遗忘在其他方面也有帮助，比如收音机里一首歌的情绪影响。不同之处在于，音乐与陈述性记忆的关系要小得多，而与模式和美感的关系要大得多。就像美丽的日落。你不需要忘记一次日落去爱另一次日落。这就是为什么一首朗朗上口的曲子即使多次重放也能让人上瘾，而一首爵士或古典名乐即使不被反复播放，也能让人永生难忘。
 
-Knowledge undermines novelty. There is no novelty seeking brain center that would specifically decline with age. There is no novelty seeking extinguishing program activated in development. Novelty of an area of knowledge disappears once an area of ignorance is filled up.
+知识会破坏新鲜感。没有一个追求新奇的大脑中枢会随着年龄的增长而衰退。在开发过程中没有启动过新奇的灭火程序。一旦无知的领域被填满，知识领域的新奇感就会消失。
 
-The good news coming from our understanding of the [learn drive](https://supermemo.guru/wiki/Learn_drive) is that it can be employed in lifelong passionate education. Learning can be as much fun at 80 as it is at 15.
+知识的增加会破坏求新欲。神经中枢随着年龄的增加不会削减一个人的求新欲。 这种求新欲也不会随着一个人的发展而泯灭。 但当一个人在某一个的知识领域的无知被填满后，他的求新欲也随之消散
 
-## Learn drive vs. learning
+我们对[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的理解带来的好消息是，学习内驱力可以在终生的激情教育中起作用。80岁的时候学习和15岁的时候一样有趣。
 
-The main trick we can employ in keeping the learning passion alive is constant learning itself. Learning fills up the brain with new knowledge. However, it also identifies and magnifies the areas of ignorance. By an appropriate selection of the learning material, we can constantly look for new areas to fill up. This is best done with [self-directed learning](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning). Only a learner herself can effectively identify the areas of knowledge, the areas of ignorance, and the areas in-between that are suitable for learning.
+## 学习内驱力 与 学习
 
-Learning at school violates the principles of efficient learning by taking away the control from the learn drive guidance system. Passive learning at school will often hit the areas of established knowledge, which will make it boring. It will often hit areas of ignorance, which will make it incomprehensible. Rarely will it accurately hit the areas where new fascinating knowledge can expand the knowledge tree.
+保持学习热情的主要技巧是不断学习本身。学习使大脑充满新知识。然而，它也识别和扩大了不懂的领域。通过选择合适的学习材料，我们可以不断地寻找新的领域来填补。这是[自主学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)的最佳方式。只有学习者自己才能有效地识别出知道的领域、不懂的领域以及中间适合学习的领域。
 
-**Passive pre-programmed learning at school suppresses the learn drive**.
+在学校的学习通过夺去学习内驱力引导系统的控制，违反了有效学习的原则。在学校被动学习往往会触及已知的知识领域，这将使它变得无聊。它常常会触及不懂的领域，使之难以理解。它很少能准确地触及到那些可以从已有的知识树中扩展出去的新知识。
 
-Metaphorically speaking, teachers throw pieces of knowledge at students and hope some of that knowledge sticks. Usually, it does not. Most of the courseware material is gone in a month. After a year, only repetition, review, duplication, and exams help a fraction of that knowledge survive in the brain. [Self-directed learning](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning) based on the [learn drive](https://supermemo.guru/wiki/Learn_drive) is extremely precise in rejecting unsuitable knowledge or finding those places in the knowledge tree that can adapt new portion of knowledge that fit the need.
+**学校的被动预编课程学习会抑制学习内驱力。**
 
-This is one of the biggest ailments of schooling: students keep complaining that school is too boring or school is too hard. Students are not happy, and this works against the system. This problem cannot be effectively resolved if we retain the old classroom learning system. It is impossible to optimize learning in a group of students who will always diverge in their knowledge due to different passions, different interests, different talents, and different learning speeds. The only effective optimization solution is [**self-directed learning**](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning).
+打个比方说，老师把一段段知识扔给学生，希望他们能从中学到一些东西。通常情况并非如此。大多数课件材料在一个月内就用完了。一年后，只有重复、复习、重复和考试才能帮助部分知识在大脑中保存下来。基于[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的[自主学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)在拒绝不合适的知识或找到可以从已有的知识树中扩展出去的新知识方面是非常精确的。
 
-## Teacher problem
+这是学校教育的最大弊病之一:学生们总是抱怨学校太无聊或太辛苦。学生们不快乐，这与系统背道而驰。如果我们保持旧的课堂学习制度，这个问题就不能被有效地解决。在一个总是因为不同的激情、不同的兴趣、不同的天赋、不同的学习速度而导致知识差异的群体中，优化学习是不可能的。唯一有效的优化解决方案是[自主学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)。
 
-A well-intentioned teacher may also contribute to the suppression of the learn drive even while facilitating self-directed learning.
+## 老师的困境
+
+一个善意的老师在促进自主学习的同时，也可能抑制学习内驱力。
+
+如果一个孩子有一个问题“纽约在哪里?在哪个国家?”，父母或老师的自然本能是提供答案。如果孩子经常面对同样的问题，她将能够自己回忆起答案。否则，她将再次需要帮助。这种复习的整体效果类似于 SuperMemo 中的复习，只不过它是自然产生的，没有与计算机交互的额外成本，而且它是随机产生的，没有优化每次复习的记忆效果。这种互动对学习内驱力既有抑制作用又有增强作用。随着事实逐渐被记住，人们对纽约作为美国一部分的兴趣也会逐渐减退，即不再是新鲜事。对美国相关事物的兴趣可能会随着对纽约兴趣的增加而增加。对纽约相关事物的兴趣可能会与对美国的兴趣成比例增加。
 
 If a child has a question *"Where is New York? In which country?"*, a natural instinct of a parent or teacher is to provide the answer. If the child is exposed to the same question frequently enough, she will be able recall the answer on her own. Otherwise, she will need help again. Overall effect of such review would be similar to review in [SuperMemo](https://supermemo.guru/wiki/SuperMemo), except it would come naturally without the extra cost of the interaction with a computer, and it would come in a random manner without optimizing for the memory effect of each review. This type of interaction has both suppressive and enhancing effect on the [learn drive](https://supermemo.guru/wiki/Learn_drive). The interest in New York as part of the USA will gradually decline as the fact becomes known, i.e. no longer new. The interest in things related to the USA may increase in proportion to the interest in New York. The interest in things related to New York may increase in proportion to the interest in the USA.
+
+当孩子没有从老师那里得到及时的反馈时，就会发生更有趣的互动。这个问题可能仍未得到解答，知识也不会增加。然而，所有没有得到即时回应的问题都有助于学习动力。纽约的位置仍然是个谜，每次曝光都会让它变得更加有趣。兴趣的增加将沿着与控制长期记忆稳定性的增加相似的公式进行(正如两部分模型所预测的那样)。兴趣稳定性的提高并不会对知识产生立竿见影的贡献，但会对学习动力产生强大的影响。孩子会好奇地探索和发现自己在一个竞争的过程中，所有感兴趣的领域将竞争的孩子的焦点，这将是上下文依赖。例如，在生物学的背景下，纽约甚至可能不会在记忆中被点亮。然而，在地图检查或地理纪录片的背景下，这个问题可能会再次出现，并推动进一步的探索。一旦孩子找到了一个热门问题的答案，即一个相对重要程度较高的问题在记忆中燃烧稳定，学习的奖励就会被放大。学习的乐趣增加了。奖励在联想记忆中传播，并增强了与了解纽约、了解美国以及了解与这两者有关的事物有关的积极联想。这是一个奖励传播级联，其深度取决于奖励的水平和原始的好奇心程度。这种级联涉及到内存整合。通过这种方式，通过不回答问题，老师可以潜在地增加记忆网络中更大区域的巩固。根据定义，这减少了在整个学习过程中复习知识的需要。
 
 A far more interesting interaction occurs when the child **does not** receive an instant feedback from a teacher. The question may remain unanswered, and knowledge will not increase. However, all questions asked that get no instant response contribute to the learn drive. The location of New York remains a mystery, which will get more interesting with each exposure. The increase in interest will progress along formulas similar to those that govern the increase in [long-term memory stability](https://supermemo.guru/wiki/Memory_stability) (as predicted by the [two component model](https://supermemo.guru/wiki/Two_component_model_of_memory)). The increase in stability of interest does not have an immediate contribution to knowledge, but it has a powerful impact on the [learn drive](https://supermemo.guru/wiki/Learn_drive). The child will be curious to explore and find out on its own in a competitive process where all areas of interest will compete for child's focus that will be context dependent. For example, in the context of biology, New York might not even light up in memory. However, in the context of map inspection, or a geographic documentary, the question may pop up again and drive further explorations. Once the child finds answers to a burning question, i.e. a question with a high degree of relative importance burnt stable in memory, the reward of learning becomes magnified. The pleasure of learning increases. The reward propagates in associative memory and enhances positive associations related to knowing New York, knowing the US, and knowing things related to both. This is a reward propagation cascade whose depth depends on the level of reward and the original degree of curiosity. That cascade involves memory consolidation. This way, by not answering a question, a teacher may potentially increase consolidation in a larger areas of memory networks. By definition, this reduces the need for review of knowledge in the entire learning process.
 
