翻译原文搬运

--- a/我再也不会把孩子送去学校/4.学习内驱力.md
+++ b/我再也不会把孩子送去学校/4.学习内驱力.md
@@ -1,14 +1,14 @@
-# 学习内驱力(Learn drive)
+# 4 ·学习内驱力(Learn drive)
 
 学习内驱力是大脑用于组织全世界知识的[拼图游戏](https://supermemo.guru/wiki/Jigsaw_puzzle)的神经机制。
 
-## 定义
+## 4.1 定义
 
 **学习内驱力**这个术语对于证明[学校教育](https://supermemo.guru/wiki/Problem_of_Schooling)的低效是必不可少的。
 
 **学习内驱力是大脑寻求新信息的一种自然倾向。**学习内驱力是由大脑中固定的引导系统产生的。该引导系统根据检测记忆存储中的新模式，激活奖励中枢。
 
-## 术语
+## 4.2 术语
 
 我有意避免使用好奇心这个术语，这是心理学经常使用的术语。如果不能准确理解学习内驱力的机制，我反对现行学校制度的整个推理就会站不住脚。当我解释为什么我不想使用其他容易被误解的已有术语时，对简单而精确的术语的需要将变得更加清晰。
 
@@ -39,7 +39,7 @@
 
 **猎奇**是心理学和行为科学中广泛应用的概念。它经常与好奇心混淆。然而，它的正确位置在于特质理论。猎奇与冲动、刺激或感觉追求相关。并且它被视为一种可能导致行为问题的特质。与此相反，学习内驱力是人类最纯粹的需求，它使我们成为发明家和发现者。猎奇是[克罗宁格人格模型](https://en.wikipedia.org/wiki/Temperament_and_Character_Inventory)的一部分。在一些性格测试中，它是外向性的一部分。它是遗传的，与多巴胺受体有关，它可能会把你送上珠穆朗玛峰。它可能与药物滥用有关。与 [D4 受体](https://en.wikipedia.org/wiki/Dopamine_receptor_D4)基因相关的形形色色的报告被解释为心理学家们对猎奇究竟是什么缺乏共识。学习内驱力是普遍的，是与生俱来的，但它也高度依赖于记忆的状态，即它是由经验塑造的。
 
-## 新奇和压力
+## 4.3 新奇和压力
 
 在实验室里，老鼠会被吓得去寻找新事物。当老鼠嗅到捕食者的气味时，它会加倍努力寻找一种新的方法走出自己的环境。这种行为显示出先天驱动力和诱发驱动力之间可能存在混乱。老鼠的行为取决于对新事物的寻找和对风险的恐惧之间的平衡。换句话说，这是对新事物的探索和对新事物的恐惧之间的平衡。有人可能会错误地用这种老鼠实验来得出结论:孩子们可能会被吓得去学习。事实正好相反。[长期的压力是大脑的主要破坏因素之一]()。它是成长中的主要敌人，也是学习内驱力的主要抑制因素。于是我们就混淆了求新(表现)和求新(本能)。有些过程可以在不改变本能的情况下增强表现。你可能会吓到动物去追求新奇(表现增强)，但从长远来看却抑制了本能(本能抑制)。新事物的吸引和新事物的恐惧将永远存在。在优化教育中，我们需要关注吸引部分，消除恐惧部分。学习内驱力是寻找新事物的吸引力的一部分。
 
@@ -47,13 +47,13 @@
 
 学习内驱力是获得新知识的一种天生本能。所有健康的学生都有学习内驱力。这是一股改变世界的好力量。
 
-## 学习驱力的抑制因素
+## 4.4 学习驱力的抑制因素
 
 **无聊**现在可以被重新定义为缺乏学习内驱力系统的奖励。一个健康的大脑会抵制无聊，并将其视为一种惩罚。在学校里的孩子由于[习得性无助](https://supermemo.guru/wiki/Learned_helplessness_vs._learn_drive)的机制逐渐习惯于忍受无聊。
 
 我将试图通过[我们对待新生儿和初学走路的孩子的方式](https://supermemo.guru/wiki/Baby_management)来展示我们是如何系统性地削弱学习内驱力的。我们继续采用低质量的日托，最终以义务教育的方式破坏学习内驱力。到了高中毕业的时候，学习内驱力往往已经完全被摧残而退化了。这往往被错误地归因于衰老过程，甚至被归咎于自然发展。这是一个危险的谎言。**学习内驱力可以为70多岁的老人提供和7岁孩子一样多的动力。**我来解释一下。
 
-## 延伸阅读
+## 4.5 延伸阅读
 
 有关好奇心理论的详细讨论，请参见:
 
@@ -61,7 +61,7 @@
 
 - [好奇心与探索](http://www.csun.edu/~vcpsy00h/students/explore.htm)
 
-## 总结: 学习内驱力
+## 4.6 总结: 学习内驱力
 
 - 学习内驱力是大脑寻求新信息的一种自然倾向
 
