--- a/我再也不会把孩子送去学校/5.学校教育对学习内驱力的影响.md
+++ b/我再也不会把孩子送去学校/5.学校教育对学习内驱力的影响.md
@@ -1,15 +1,15 @@
-# 学校教育对学习内驱力的影响
+# 5 学校教育对学习内驱力的影响
 
 强制性的学校教育抑制了学生的学习内驱力，降低了学生的长期学习效果。
 
-## 学习内驱力 与 年龄
+## 5.1 学习内驱力 与 年龄
 
 **学习内驱力是中枢神经系统适应发展的重要本能**。婴儿在他们的环境中寻找新奇的元素。这是一种寻找和发现值得学习的东西的方法。婴儿可以在头上的空间里随机搜索，直到找到一个移动的物体。这个物体可以归类为新奇的东西，孩子可以从中学到东西。在发育的某一阶段，婴儿会品尝周围所有的东西，以便了解什么是可以吃的。一个孩子在一屋子玩具里，会把注意力集中在一件玩具上，他认为这是最能满足年轻心灵好奇心的玩具。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)是一种强大的大脑机制，给婴儿们贴上了[永不停止的完美学习机器](https://supermemo.guru/wiki/How_baby_brain_does_not_work)的标签。
 一些科学家认为，随着年龄的增长，我们自然地就失去了求新的欲望和[学习内驱力](https://supermemo.guru/wiki/Learn_drive)。这种说法是危险的错误。确实有许多下降的迹象。成年人不再对所有会动的东西着迷。他会觉得一屋子玩具很无聊。他会吐出未尝过味道，经常讨厌新菜。从来没有吃过蜗牛或甲虫的人不太可能喜欢吃蜗牛或昆虫做的菜。对于渴望知识的年轻学生来说，这个世界是很典型的，但年长者不再对这个世界感兴趣。随着年龄的增长，年长者的热情似乎在稳步下降。
 
 理解学习[内驱力](https://supermemo.guru/wiki/Learn_drive)和它被认为随着时间推移而下降的机制是[优化教育](https://supermemo.guru/wiki/Optimization_of_education)的关键。
 
-## 学习内驱力 与 知识
+## 5.2 学习内驱力 与 知识
 
 **随着年龄的增长，削弱学习内驱力的主要因素是已有的知识。**还有一些次要因素，如(1)当前知识的“吸引力”下降，(2)大脑的实际老化。老化可能会导致神经网络的老化、突触削减、精神活力的减少等。这些都可以通过精神保健和学习本身来预防。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)和热情可以一直保持到百岁。在健康的生活方式中，保持大脑的活力比保持运动系统的活力更容易。
 
@@ -23,7 +23,7 @@
 
 我们对[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的理解带来的好消息是，学习内驱力可以在终生的激情教育中起作用。80岁的时候学习和15岁的时候一样有趣。
 
-## 学习内驱力 与 学习
+## 5.3 学习内驱力 与 学习
 
 保持学习热情的主要技巧是不断学习本身。学习使大脑充满新知识。然而，它也识别和扩大了不懂的领域。通过选择合适的学习材料，我们可以不断地寻找新的领域来填补。这是[自主学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)的最佳方式。只有学习者自己才能有效地识别出知道的领域、不懂的领域以及中间适合学习的领域。
 
@@ -35,7 +35,7 @@
 
 这是学校教育的最大弊病之一:学生们总是抱怨学校太无聊或太辛苦。学生们不快乐，这与系统背道而驰。如果我们保持旧的课堂学习制度，这个问题就不能被有效地解决。在一个总是因为不同的激情、不同的兴趣、不同的天赋、不同的学习速度而导致知识差异的群体中，优化学习是不可能的。唯一有效的优化解决方案是[自主学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)。
 
-## 老师的困境
+## 5.4 老师的困境
 
 一个善意的老师在促进自主学习的同时，也可能抑制学习内驱力。
 
@@ -50,7 +50,7 @@
 1. 那个孩子已经发了疯地想知道且他的好奇心已经被激发到了极点。从增殖和巩固的角度来看，不会有太多收获。学习内驱力种子的新分支将会出现，并促使进一步的探究。
 2. 这个问题具有高度基础性，因为它是许多其他重要知识的基础，而这些知识可能很难或只能缓慢地靠自学得到。基本问题具有普遍性，并通过学习进入新领域而得到重新巩固。它们只是在探索中不断出现。
 
-## 学习内驱力扭曲
+## 5.5 学习内驱力扭曲
 
 学习内驱力引导系统存在一定的危险性和固有的低效性。在我们认为不合适的领域看到新奇事物它很容易被骗，。对于一个普通的学生来说，跳棋游戏很快就变得无聊了。对于一个老练的人来说，下国际象棋更有趣，但也可能很容易变得无聊。对于一个能把国际象棋看作是棋盘和记忆故事相结合而成的丰富多彩的图案的大师来说，国际象棋可能是一种永无止境的魅力源泉。换句话说，一个棋盘和几副棋子可以为求新欲系统提供无穷无尽的奖励刺激。
 
@@ -62,7 +62,7 @@
 
 对于许多有天赋的孩子来说，[自主学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)是他们腾飞所需要的。对于所有寻求有价值知识的孩子来说，通用的方法是，**在任何校正系统的引导下[自主学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)。**这个校正者可以是父母、老师或同龄人(包括年长的同龄人)。学习轨迹校正器需要**在[最佳推进区](https://supermemo.guru/wiki/Push_zone)**，以确保正确的学习轨迹而又不会扰乱系统。当然，没有比成熟的自我意识更好的校正者，只有一点自律。受过教育的成年人应该理解终身学习的必要性，并理解学习进步的正确方向。理想情况下，生活本身是学习轨迹的最佳校正器。
 
-## 上学热情
+## 5.6 上学热情
 
 学校抑制[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，这可能导致危险的长期神经适应，这可能会扭曲年轻人的一生。我在[下面的章节](https://supermemo.guru/wiki/Learned_helplessness_vs._learn_drive)中写了这件事。
 
@@ -70,9 +70,9 @@
 >
 > 历史总是惊人的相似，我怀着极大的期望和快乐的期待开始了我所有的学校生活。小学、中学和我的两所大学都是这样。在所有情况下，热情都很快消失了。通常在第一天或第一堂课之后！然而，有时会出现相反的过程。当我因为纪律原因被一所学校开除时，我来到了一所期望值最低的新学校。这实际上帮助我提升了一段时间的热情。在一位[好老师](https://supermemo.guru/wiki/Great_teachers_change_the_world)的帮助下，我度过了几个月的学校历险。同样，一位伟大的老师或[自主学习的自由](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)在后来帮助我从学校中获得了一些乐趣。如果我在波兰的学校里一遍又一遍地模拟我自己的生活，大部分时间我都会失去对学习的热爱。与之相反的快乐过程只留给少数幸运的人，他们遇到了幸运的环境或幸运的自己的倾向。
 
-## 用 SuperMemo 加强学习内驱力
+## 5.7 用 SuperMemo 加强学习内驱力
 
-### 增强学习内驱力
+### 5.7.1 增强学习内驱力
 
 > SuperMemo 插入。[SuperMemo 是什么?](https://supermemo.guru/wiki/What_is_SuperMemo%3F)
 >
@@ -82,7 +82,7 @@
 >
 > > [渐进学习](https://supermemo.guru/wiki/Incremental_learning)是[学习内驱力](https://supermemo.guru/wiki/Learn_drive)最强大的催化剂
 
-### 阻碍学习内驱力
+### 5.7.2 阻碍学习内驱力
 
 > SuperMemo 插入。[SuperMemo 是什么?](https://supermemo.guru/wiki/What_is_SuperMemo%3F)
 >
@@ -90,7 +90,7 @@
 >
 > > 没有新材料的 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 跟学校里无聊的课程很相似。两者都抑制了[学习内驱力](https://supermemo.guru/wiki/Learn_drive)
 
-### 中年时期的学习内驱力
+### 5.7.3 中年时期的学习内驱力
 
 我没有注意到自己学习热情的下降，而是观察到了相反的情况。这就是为什么我强烈反对研究人员将[学习内驱力](https://supermemo.guru/wiki/Learn_drive)下降归因于年龄。我采用[渐进学习](https://supermemo.guru/wiki/Incremental_learning)来保持我对学习的热情。我在下面的个人笔记中解释了它是如何对我起作用的。
 
@@ -116,7 +116,7 @@
 >
 > 像一个不成熟的学生一样，我也厌倦过间隔重复和记忆，说“在这个领域没有什么可学习或发现的”。我的同事，尤其是Krzysztof Biedalak和Janusz Murakowski，给了我一个小小的校正推送，说“[双变量记忆模型](http://www.super-memory.com/english/2vm.htm)可以使算法更简单，更容易实现、许可和推广”。当我开始探索这个干涸的领域，我就发现了无数我不知道的东西，并重新点燃了我对间隔重复的热情。讽刺的是，这个算法并没有变得那么简单，但事实是，熄灭的激情可以被重新点燃。
 
-## 永恒的学习内驱力
+## 5.8 永恒的学习内驱力
 
 激情来来去去。这个过程是可控的。[自主学习](https://supermemo.guru/wiki/Self-directed_learning)是这种控制的最佳表现。间隔重复有助于从逐渐消退的激情中保持收益。反过来，这又有助于激情在需要时重新点燃。
 
@@ -124,7 +124,7 @@
 
 培养学习热情的过程很容易训练，也很容易被抑制。在这有很强的与神经系统有关的成分。糟糕的教育造成的损害是可逆的，一个人可以远远超过他或她最初的基线。然而，一些最初的潜力可能永远失去。
 
-## 总结: 改变学习内驱力的因素
+## 5.9 总结: 改变学习内驱力的因素
 
 - [学习内驱力](https://supermemo.guru/wiki/Learn_drive)不受大脑自然老化的影响
 
