--- a/我再也不会把孩子送去学校/1.前言.md
+++ b/我再也不会把孩子送去学校/1.前言.md
@@ -1,6 +1,6 @@
-# 前言
+# 1 前言
 
-## 学校教育的失败
+## 1.1 学校教育的失败
 
 现在的学校没有教育孩子，反而对许多孩子造成了伤害。学校本应当成为新文艺复兴或新启蒙运动的工具。然而它已经成为一种压迫的工具，剥夺了孩子们的自由和对学习的热爱。
 
@@ -10,15 +10,15 @@
 
 我**不**相信我能说服许多家长、教育工作者或权威人士。我主要希望孩子们能从下而上开始革命。孩子们更开放，他们更了解自己的问题。而且, 考虑到亲情, 他们比我更有可能说服自己的父母。参见: [为什么这本书会失败](https://supermemo.guru/wiki/Why_is_it_hard_to_explain_an_effective_education_system%3F)
 
-## 废除学校制度
+## 1.2 废除学校制度
 
 我在学校里待了二十多年，在记忆和学习领域工作了三十年，我的整个人生都在自学。学校与[自主学习](https://supermemo.guru/wiki/Self-directed_learning)之间的反差如此之大，以至于我每天一觉醒来，都不敢相信[古老的普鲁士工厂学校模式](https://en.wikipedia.org/wiki/Prussian_education_system)的存在。这篇文章的主要论点是学校教育已经成为过去。未来将以[自由学习](https://supermemo.guru/wiki/Free_learning)为基础。在人类被人工智能取代之前，还有很大的进步空间。人脑有着惊人的潜力。如今，大部分潜能都被浪费在了学校。不可否认，学校已经把世界变得更好，内燃机也是如此。然而，现在是抛弃旧技术和旧系统的时候了，是时候改变了。
 
-## 基于大脑的改革
+## 1.3 基于大脑的改革
 
 [本书](https://supermemo.guru/wiki/Problem_of_Schooling)运用神经科学的原理，从基础上解释了学习是如何发生的，如何能显著提高学习效率，学校如何阻碍有效学习，以及如何通过全面的学校[改革](https://supermemo.guru/wiki/Reform)来补救。
 
-## 对孩子的爱
+## 1.4 对孩子的爱
 
 我的大部分文章都提到了过去和现在几十位伟大的教育家和作家一再强调的古老真理。你会发现[Gray](https://supermemo.guru/wiki/Peter_Gray) [Holt](https://supermemo.guru/wiki/John_Holt), [Greenberg](https://supermemo.guru/wiki/Danny_Greenberg), [Mitra](https://supermemo.guru/wiki/Hole_in_the_wall), [Robinson](https://supermemo.guru/wiki/Ken_Robinson),[Locke](https://en.wikipedia.org/wiki/John_Locke)和其他许多人都有类似的经历(顺序不分先后)。我用一点神经科学知识和我自己对高效学习的研究，进一步充实一些伟人的著作。参见: [我的资历](https://supermemo.guru/wiki/Problem_of_schooling:_My_qualifications)。
 
@@ -30,11 +30,11 @@
 
 我愿意相信，我对孩子们的关心不亚于Gray 或 Holt，但我也带来了他们的工作中可能缺失的一个额外议程:我正在寻找一个方案，用于批量生产小诺贝尔奖得主、小研究人员、小工程师和小创造性问题解决者。好消息是，这个方案完全符合自由学习哲学，因为没有真正的自由，就没有真正的天才。换句话说，我从纯粹的爱转向了教育事业，这是一个很小的转变，任何孩子都不会因为这种转变而受到伤害。恰恰相反，纯粹的爱能培养出一个健康而有成就的孩子，这就是爱的满足。
 
-## 执行概要
+## 1.5 执行概要
 
 这本书太长了。您可以通过[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)来最好地阅读它。如果这还是太多，去[总结](https://supermemo.guru/wiki/Summary)，并遵循链接去阅读你不同意的东西。最终的结论是，上学削弱了年轻一代的大脑潜能。我们可以做得更好。不是20%更好，不是200%更好，而是更多!我在文章中涵盖了一些数字。
 
-## 孩子不是微型的成年人
+## 1.6 孩子不是微型的成年人
 
 在设计完善的教育生态系统时，必须牢记的重要一点是，儿童大脑的工作原理与成年人的大脑完全不同。我们需要让孩子们自由，永远不要忘记我们的大脑是不同的，我们的记忆扭曲了过去，孩子们更了解自己的大脑!
 
@@ -44,7 +44,7 @@
 
 我们需要为孩子提供一个蓬勃发展[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的条件，这是[自主学习](https://supermemo.guru/wiki/Self-directed_learning)的基础。[自由学习](https://supermemo.guru/wiki/Free_learning)是以学习技能为基础的。在学校学习是一个被动的过程。这种被动阻碍了有效学习中使用的关键技能和习惯。自由在决策中是必不可少的，这是发展必要技能的起点。
 
-## 学习基本定律
+## 1.7 学习基本定律
 
 成年人说孩子们讨厌学校是因为他们不知道学校的好处。他们说:“*孩子们看得不够远。*”因此，大人们认为学习应该以宏大的教育目标的名义进行。这可能是潜存于学校教育概念的第一个错误观念。这是非常危险的，因为目标和知识评估之间存在循环反馈。由于目标估值是基于知识的，因此不能从外部强加。同时，习得是以知识为基础的。因此，所有的学习都是循序渐进的。这意味着，与许多成年人的看法恰恰相反:**孩子是最能评估哪些知识适合他们当前的知识模型的人**。
 
@@ -52,19 +52,19 @@
 
 新的大脑科学告诉我们大脑中有一个[价值检测器](https://supermemo.guru/wiki/Knowledge_valuation_network)。这个检测器对于高质量的学习至关重要。它接受适合于知识模型的有价值的知识，拒绝其他任何东西。世界各地的学校，没有一个国家例外，在很大程度上忽略了这个检测器!通过纠正这个巨大的全球性错误，我们可以提高学习的价值和知识的质量。由于复利的存在，战略的变化具有难以预测的维度。对人类来说，这是一种巨大的潜力，尚未被利用，随时可能爆发。
 
-## 给我们未来的自己的信息
+## 1.8 给我们未来的自己的信息
 
 教育的最大效果，不是伟大的学习，而是使人对进一步学习丧失兴趣的终生影响。学校没有教孩子如何学习，反而使孩子们讨厌学校。然而，学校结束了，一个更糟糕的副作用仍然存在:讨厌学习。幸运的是，人类的大脑天生[渴望学习](https://supermemo.guru/wiki/Learn_drive)，大多数人在十年内就能恢复。恢复后，记忆会掩饰过去，大人将自己的成功归功于教育。这使恶性循环长期存在。成年人不理解孩子。他们甚至不理解自己的大脑，从多年前他们自己还是孩子的时候。记忆无法向未来发送准确的信息。参见:[学校抑制学习内驱力](https://supermemo.guru/wiki/Schools_suppress_the_learn_drive)
 
-## 早期教育的危险
+## 1.9 早期教育的危险
 
 早期教育尤其危险。[本书](https://supermemo.guru/wiki/Problem_of_Schooling)介绍了[有毒记忆](https://supermemo.guru/wiki/Toxic_memory)的概念，这对于理解学校教育造成的危害是非常重要的。我曾见过在 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的影响下，有毒记忆蓬勃发展。我看见它们生长，就像你看见植物或宠物在你家里成长一样。我们越早送孩子上学，受害的可能性就越大。世界上许多国家的政府都渴望降低学龄。他们不知道!
 
-## 徒劳的填鸭式
+## 1.10 徒劳的填鸭式
 
 填鸭式学校尤其危险。他们不仅伤害孩子。他们也可能提供令人惊叹的短期回报，让对神经科学了解较少的教育工作者感到眼花缭乱。这就是为什么许多雄心勃勃的教育家对复制韩国或新加坡的成功感到惊讶。在纠正了文化差异之后，我建议他们应该看看学业成就和未来创造性成就之间的关系。例如，在诺贝尔奖人均排名中，“懒惰”的英国排名高于亚洲巨人。一个更有说服力的例子应该来自过去伟大天才的传记:科学家、发明家和发现者。我们需要研究他们的[非学校教育](https://supermemo.guru/wiki/Unschooling)来理解那些导致巨大的创造性大脑成长的原理!在通往天才的道路上几乎没有[填鸭式的学习](https://supermemo.guru/wiki/Cramming)。
 
-## 学习能力失效
+## 1.11 学习能力丧失
 
 在学校里有限地依靠[自主学习](https://supermemo.guru/wiki/Self-directed_learning)就像缺乏锻炼一样。它把智力变成懒惰的懒汉。许多人由于多年的忽视而讨厌运动。当他们在中年时重新开始锻炼时，在某种程度上，锻炼是如此令人愉悦，以至于人们重新发现它确实会让人上瘾。学习也是如此。
 
@@ -74,11 +74,11 @@
 
 **学习的自由是培养在获取知识和创造性解决问题方面的高水平技能的关键。**
 
-## 宏大的教育改革
+## 1.12 宏大的教育改革
 
 一旦我们让自己的孩子[自由学习](https://supermemo.guru/wiki/Free_learning)，我们就需要解放整个教育体系。让所有类型的学校和思想蓬勃发展(参见:[宏大的教育改革](https://supermemo.guru/wiki/Reform))。循序渐进的学校改革进程应该牢记一个重要目标:地球上所有的大脑都应该被解放出来，去追求[自由学习]()。在那之后，除非发生灾难，只有机器时代才能改变人类的方向。
 
-## 何时学校是一种眷顾
+## 1.13 何时学校是一种眷顾
 
 学校可以是一种眷顾。在后埃博拉时代的利比里亚，在里约热内卢贫民窟的一个小村庄，在波兰的一个 10 户人家的村庄，在后塔利班时代的阿富汗，在玛萨雷(Mathare)贫民窟，在贫穷的移民郊区，学校是一种眷顾。它可能是一种摆脱贫困、暴力或虐待的方式。这也许是一条通向光明未来的道路。在我附近，孩子们不上学就吸毒。在 15 公里外的一个村子里，他们的主要娱乐活动是在当地商店前喝啤酒。从这个意义上说，学校是在保护孩子免受不作为、迟钝的社区或病态家庭的有害影响。
 
@@ -87,7 +87,7 @@
 
 在这个范围的另一边，学校是人性中最优秀品质的抑制剂。有天赋的人受害最多。
 
-## 优化错误
+## 1.14 优化错误
 
 学校教育的进步是用分数和考试成绩来衡量的。[PISA](https://en.wikipedia.org/wiki/Programme_for_International_Student_Assessment)tests是国际竞争的黄金标准。由于评分和考试成绩在很大程度上是基于短期学习来获得短期结果的，所以我们的优化方向是非常有害的。我们优化的是[死记硬背](https://supermemo.guru/wiki/Cramming)，而不是学习。很少有人关注孩子们实际从学校里收获了多少。考试当天完善的历史知识很可能转化为[在学校最后一天残存的历史知识](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)。
 
@@ -101,7 +101,7 @@
 
 优化教育的问题在于，理想情况下，我们应该在今天进行渐进修正，并衡量 30-50 年后的结果。这就是为什么有效的优化教育必须依赖于从学习理论推导出来的模型。幸运的是，这些模型生成了一个相对简单的画面。大脑已经配备了所有的工具，可以轻松地完成我们今天认为不可能完成的事情。
 
-## 培养多样性
+## 1.15 培养多样性
 
 在家上学为自由学习提供了良好的基础。人们经常抱怨在家上学的人和不上学的人很奇怪，或者社交能力差。这种抱怨忽略了一个事实，即怪异的反义词是同质化的、没有面孔的、无趣的。建立在各种教育和知识基础上的社会的反面是朝鲜。为了健康的多样性，我们也需要朝鲜的例子。至少要珍惜我们的自由，学会一两件让人们和社会幸福的事情。
 
@@ -111,7 +111,7 @@
 
 当我推广英语作为世界的统一语言时，一个朋友开玩笑说，我不如为世界推广一种品牌的啤酒。我需要强调的是，我们总是需要平衡标准与多样性。一种面向世界的语言是全球交流的重要工具。多样化的教育对知识的发展至关重要。为了人类知识不受限制地增长，我们需要良好的获取知识的途径，良好的交流，一种全球性的语言也应该为这一目标服务。
 
-## 知识的消亡
+## 1.16 知识的消亡
 
 伟人有伟大的理想。然而，伟大的梦想往往不能实现，并与它们的父亲——梦想家一起死去。
 
@@ -128,7 +128,7 @@
 
 我的[书](https://supermemo.guru/wiki/Problem_of_Schooling)要[失败](https://supermemo.guru/wiki/Why_is_it_hard_to_explain_an_effective_education_system%3F)了。如果诺贝尔奖得主[米尔顿•弗里德曼](https://en.wikipedia.org/wiki/Milton_Friedman)(Milton Friedman)在[择校方面的选择](https://supermemo.guru/wiki/School_choice)仍被忽视或误解，我突破冷漠或无知之墙的机会有多大?我在社交媒体上看到了一些机会，也看到了世界各地的在家学习者、不上学者、民主学校和[自由学习](https://supermemo.guru/wiki/Free_learning)者集体智慧的力量。我从被奴役的年轻人的叛逆本性中看到了机会。
 
-## 预言:学校教育的消亡
+## 1.17 预言：学校教育的消亡
 
 霍尔特、盖茨托和伊里奇的激进梦想很快就会实现。但这并不适用于整个社会。学校教育的一项工作可能不会结束:当家长们在工作时，学校仍将是托管孩子的设施。为了改变这种状况，我们需要集体呼吸，调整优先顺序，放慢脚步，采取更有创造性的生活方式。我并不乐观。这股热潮将继续下去。
 
