--- a/我再也不会把孩子送去学校/3.脑科学.md
+++ b/我再也不会把孩子送去学校/3.脑科学.md
@@ -1,4 +1,4 @@
-# 脑科学
+# 3 脑科学
 
 反对学习教育最有力的论据来自神经科学。塑造教育的最基本的力量之一是**学习内驱力**。理解学习内驱力至关重要，这有助于我们领悟到[自主学习](https://supermemo.guru/wiki/Self-directed_learning)、[自我控制](https://supermemo.guru/wiki/Self-paced_learning)、[自我学习](https://supermemo.guru/wiki/Self-learning)是培养知识渊博的、富有创造力的思维最有效的方法。学习内驱力中的奖励神经原理引导我公式化了[学习的基本规律](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Fundamental_law_of_learning)。我希望没有孩子会接受任何违反规律的行为。
 
