翻译更新至6.8 Detecting surprisal

--- a/我再也不会把孩子送去学校/6.Learn drive and reward.md
+++ b/我再也不会把孩子送去学校/6.Learn drive and reward.md
@@ -1,94 +1,94 @@
-# Learn drive and reward
+# 学习内驱力和奖励
 
-## The main problem in education
+## 教育中的主要问题
 
-The main problem with regards to education is the belief that learning may cause displeasure, and that this displeasure should be [endured](https://supermemo.guru/wiki/The_grind_is_the_glory) to achieve more learning.
+关于教育的主要问题是认为学习可能会引起不快，而且应该[忍受](https://supermemo.guru/wiki/The_grind_is_the_glory)这种不快从而学的更多。
 
-There are countless educators who believe that school should be like work: it is unpleasant but it just needs to be done. In this chapter, I will explain that the opposite is true:
+有无数的教育者认为学校应该像工作一样:它令人不快，但它只是需要去做。在这一章中，我将解释相反的才是对的:
 
-**Good learning is inherently pleasurable**, and without pleasure there is no good learning.
+**好的学习本身就是快乐的**，没有快乐就没有好的学习。
 
-The displeasure myth is so prevalent that even good teachers with an extensive understanding of the pleasures of learning believe that a degree of unhappiness at school is unavoidable.
+不快的错误观念如此普遍，以至于即使是对学习乐趣有广泛了解的好老师也认为，学生在学校有一定程度的不快是不可避免的。
 
-In this chapter, I show that the pleasure of learning is wired into the brain, and how we systematically destroy this [gift of evolution](https://supermemo.guru/wiki/Education_counteracts_evolution) at the cost of mankind's health, learning, creativity, and ultimately future.
+在这一章中，我展示了学习的快乐与大脑息息相关，以及我们如何以人类的健康、学习、创造力以及最终的未来为代价，系统地摧毁这种[进化的天赋](https://supermemo.guru/wiki/Education_counteracts_evolution)。
 
-The main problem of education is also one of the main problems of society. By destroying the pleasure of learning we are contributing powerfully to the destruction of the pleasure of living. We have built an education system that sets millions of people up for a life of unhappiness.
+教育的主要问题也是社会的主要问题之一。我们破坏了学习的乐趣，也就大大破坏了生活的乐趣。我们建立了一个教育系统，让数百万人过上不幸福的生活。
 
-Chances are you are skeptical of my words, as the myth of unpleasant learning is a potent side effect of [schooling](https://supermemo.guru/wiki/Schooling). Therefore this chapter is an attempt to convince you. And all that is necessary to abolish this myth is an understanding of the simple mechanism by which new knowledge is encoded in the brain.
+你可能对我的话持怀疑态度，因为不愉快学习的错误观念是[学校教育](https://supermemo.guru/wiki/Schooling)的一个强有力的副作用。因此，本章试图说服你。消除这个神话所需要的只是理解大脑中编码新知识的简单机制。
 
-## Learn drive and entropy
+## 学习内驱力和熵
 
-The concept of entropy is helpful in understanding why most kids do not learn much at school.
+熵的概念有助于理解为什么大多数孩子在学校没有学到多少。
 
-You may recall from your physics class that entropy is a measure of disorder, and that the second law of thermodynamics states that the entropy of an isolated system never decreases. This is the type of sexy law of physics that we tend to remember for life. It is [universally applicable](https://supermemo.guru/wiki/Applicability).
+你们可能从物理课回忆起熵是无序的度量，热力学第二定律表明孤立系统的熵永远不会减小。这是一种形象的物理定律，我们会终生铭记。这是[普遍适用的](https://supermemo.guru/wiki/Applicability)。
 
-There is a sister concept in information theory called [Shannon entropy](https://en.wikipedia.org/wiki/Entropy_(information_theory)). It can be understood as the average value of information transmitted by a source. For example, take a channel that is continually transmitting a string of identical letters into infinity (e.g. a string of As: "AAAAAA..."). It is entirely predictable and carries an entropy of zero. We do not learn from such a channel.
+信息论中有一个姊妹概念叫[香农熵](https://en.wikipedia.org/wiki/Entropy_(information_theory))。它可以理解为由一个来源发送的信息的平均值。例如，假设一个频道连续不断地将一串相同的字母传送到无穷远处(例如，一串As :“AAA……”)中。这是完全可以预测的，并且熵为零。我们不会从这样的渠道学习。
 
-[Claude Shannon](https://en.wikipedia.org/wiki/Claude_Shannon) proposed the concept of information entropy in 1948. Soon after, scientists were hypothesizing as to whether the entropy of an information channel may have a powerful impact on how the brain perceives the value of the channel. In 1957, [Meyer hypothesized](https://supermemo.guru/wiki/Music_and_entropy) that the entropy of music determines the perception of its beauty. He concluded that a higher entropy may result in subjective tension, which correlates with more meaningful musical moments.
+[克劳德·香农](https://en.wikipedia.org/wiki/Claude_Shannon)在1948年提出了信息熵的概念。不久之后，科学家们开始假设信息通道的熵是否会对大脑感知通道价值的方式产生强大影响。1957年，[迈耶假设](https://supermemo.guru/wiki/Music_and_entropy)音乐的熵决定了人们对音乐之美的感知。他的结论是，较高的熵可能会导致主观紧张，这与更有意思的音乐片段有关。
 
-Meyer's thinking was [later refined](https://supermemo.guru/wiki/Impact_of_syncopation_on_the_pleasure_of_music) to better understand the perception of music and information in general. There is more to music than just information. This is visible through the phenomena of a song being entertaining and fun for many playbacks. But this is rarely the case with books.
+迈耶的思想[后来被改进](https://supermemo.guru/wiki/Impact_of_syncopation_on_the_pleasure_of_music)，以更好地理解音乐和一般信息的感知。音乐不仅仅是信息。这通过一个现象来看是很显然的，因为一首歌被多次回放可以令人愉快好多次。但是书籍很少出现这种情况。
 
-Music is a universal message. If you were given a choice of a radio channel, you would quickly tune out from noisy static and you would also not be too excited about zero entropy silence. However, most people will respond positively to a regular beat of a drum. As long as it wasn't being drummed on broken glass, which we are wired to dislike, we would find a radio channel with a regular drumbeat more interesting than a silent one. This will naturally last only for a while until the drumbeat itself becomes boring and too predictable.
+音乐是一种普遍的信息。如果你被允许选择一个无线频道，你会很快从嘈杂的静电干扰中调谐出来，你也不会对零熵的静音太兴奋。但是，大多数人会对有规律的鼓声做出积极的反应。只要它没有被敲打在碎玻璃上(这是我们天生不喜欢的)，我们就会发现一个有固定鼓点的广播频道比无声的更有趣。这自然只会持续一段时间，直到鼓点本身变得无聊和太容易预测。
 
-Today, we can finally test the response of the brain to information entropy. Neuroimaging shows that the [anterior hippocampus responds to the entropy of a visual stream](https://www.ncbi.nlm.nih.gov/pubmed/15896570), and similar findings have been confirmed for the [ventral striatum](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3403290/). Therefore we are now certain that the brain responds to information entropy. The entropy sensor is important in scanning the environment for learning opportunities. This is the prelude to the reward that underlies the [learn drive](https://supermemo.guru/wiki/Learn_drive).
+今天，我们终于可以测试大脑对信息熵的反应了。神经影像显示[前海马对视觉信息熵有反应](https://www.ncbi.nlm.nih.gov/pubmed/15896570)，[腹侧纹状体](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3403290/)也有类似的发现。因此，我们现在可以肯定大脑对信息熵有反应。熵感受器在扫描环境寻找学习机会时非常重要。这是奖励的前奏，而奖励是[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的基础。
 
-## Prior knowledge in information seeking
+## 信息搜寻中的预备知识
 
-We need to distinguish between information and meaning. Entropy is not a good measure of the latter. The measure of meaning must involve the brain itself in addition to the information channel metric. Prior knowledge is essential in learning. Imagine that in your search for an interesting channel on the radio you find a news service. If the service is delivered in Thai and you do not speak Thai, you will prefer a service delivered in English. In information sense, news channels may have the same entropy, yet your prior knowledge will make you opt for the English channel. While the Thai channel delivers a stream of sounds, the English channel delivers a stream of [concepts](https://supermemo.guru/wiki/Abstract_knowledge). Without understanding the knowledge of the recipient, information entropy tells us little. We cannot determine a signal-to-noise ratio.
+我们需要区分信息和意义。熵不是衡量后者的一个好指标。意义的度量除了度量信息通道之外，还必须涉及到大脑本身。预备知识在学习中是必不可少的。想象一下，当你在收音机上搜索一个有趣的频道时，你会发现一个新闻服务。如果服务是用泰语提供的，而你不会说泰语，那么你会更喜欢用英语提供的服务。就信息而言，两个新闻频道可能有相同的熵，但是你的预备知识会让你选择英语频道。泰国频道传递声音流，而英语频道传递[概念](https://supermemo.guru/wiki/Abstract_knowledge)流。如果不了解接受者的知识，信息熵就无法告诉我们什么。我们无法确定信噪比。
 
-Every listener will have his or her own preferred level of information entropy. For most music lovers, the regular beat of a disco or techno will be somewhat more interesting than the isolated beat of a drum. This type of music carries a higher average level of information. For a more sophisticated listener a bit of syncopation will be welcome. However, syncopation requires a degree of prior learning. Those with lesser knowledge of music may get confused with increased rhythmic complexity. If there is too much information in the beat it [may no longer be possible to dance to the music](https://supermemo.guru/wiki/Impact_of_syncopation_on_the_pleasure_of_music). To an average ear, the genius of Wynton Marsalis may be hard to perceive. Top shelf jazz music is reserved for only a small fraction of highly educated listeners, as for most of the population, as the complexity increases, the music slowly disintegrates into the direction of radio static.
+每个听者都有自己偏好的信息熵水平。对于大多数音乐爱好者来说，迪斯科或电子乐的常规节拍要比单独的鼓声有趣一些。这种类型的音乐承载着更高的平均信息量。对于一个更老练的听众来说，有一点切分音是将更受欢迎的。然而，切分音需要一定程度的预先学习。那些对音乐了解较少的人可能会被增加的节奏复杂性弄糊涂。如果节拍中有太多的信息，[就不可能随着音乐起舞](https://supermemo.guru/wiki/Impact_of_syncopation_on_the_pleasure_of_music)。对于一般人来说，温顿·马萨利斯的天才可能很难被察觉。顶级爵士音乐只为一小部分受过高等教育的听众准备，就像大多数人一样，随着复杂性的增加，音乐慢慢向无线电杂音的方向衰变。
 
-## Entropy detectors in the brain
+## 大脑中的熵检测器
 
-The brain cannot effectively detect the entropy of the signal hitting the retina or the eardrum. Like pixels of a monitor, retinal cells are not aware of what they display. If the detector, such as the hippocampus, is to light up in response to entropy, it must operate on the inputs from the entorhinal cortex (i.e. the input to the hippocampus itself). Those inputs will present the signal after a high degree of processing. Instead of pixels, it may present a concept. A high entropy signal at the sensory inputs will lose most of its noise component early in the process of neural selection, completion, and [generalization](https://supermemo.guru/wiki/Generalization). The signal-to-noise ratio will determine how much information is lost. The bigger the noise, the bigger the loss. The smarter we are, the more selective this processing will be and the more information will be lost at that stage. That's good. We become blind to detail. Pattern recognition will act like a deterministic function, which by definition, results in a drop in entropy. Complex patterns may become simple concepts. Those concepts will provide the actual input to the detector, e.g. the hippocampus.
+大脑无法有效检测撞击视网膜或耳膜的信号的熵。就像显示器上的像素一样，视网膜细胞也不知道它们传达了什么。如果探测器，如海马体，要根据熵而响应，它必须对来自内嗅皮层的输入(即海马体本身的输入)进行操作。这些输入将在高度处理后显示信号。它可能会呈现一个概念，而不是像素。感觉输入端的高熵信号将在神经选择、完善和[概念化](https://supermemo.guru/wiki/Generalization)过程的早期失去大部分噪声成分。信噪比将决定丢失多少信息。噪音越大，损失越大。我们越聪明，这个处理过程就越有选择性，在那个阶段会丢失越多信息。这很好。我们对细节视而不见。模式识别就像一个确定性函数，根据定义，它会导致熵的下降。复杂的模式可能会变成简单的概念。这些概念将为检测器提供实际输入，例如海马体。
 
-Note that the visual stream produced in experiments that prove the [response of the hippocampus to signal entropy](https://www.ncbi.nlm.nih.gov/pubmed/15896570) has a highly [symbolic nature](https://supermemo.guru/wiki/Abstract_knowledge). As such, the stream will lose far less information in processing. That highly simplified and [conceptualized](https://supermemo.guru/wiki/Generalization) message will be scanned for surprisal and provide guidance to the entire [learn drive](https://supermemo.guru/wiki/Learn_drive) system. This is why, in this case, the hippocampus appears to be responding to input entropy.
+请注意，实验中产生的视觉流证明[海马体对信号熵的反应](https://www.ncbi.nlm.nih.gov/pubmed/15896570)具有高度[象征性](https://supermemo.guru/wiki/Abstract_knowledge)。因此，视觉流在处理过程中丢失的信息会少得多。这一高度简化和[概念化](https://supermemo.guru/wiki/Generalization)的信息将会被扫描为惊奇，并为整个[学习内驱力](https://supermemo.guru/wiki/Learn_drive)系统提供指引。这就是为什么在这种情况下，海马体似乎对输入熵有反应。
 
-The above reasoning explains why both low and high entropy sensory signals can be uninteresting. After a degree of processing, a high entropy signal may lose all its noise and deliver a low entropy input to the hippocampus. We then observe the illusion of an "optimum entropy" level at sensory input. We need a new concept, **learntropy**, that will help us accurately determine the attractiveness of the signal. Learntropy needs to take into account the high degree of processing of information before it can activate reward centers in the brain. Learntropy is discussed [later](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learntropy) in this text.
+上面的推理解释了为什么低熵和高熵的感觉信号都是无趣的。经过一定程度的处理后，高熵信号可能会失去所有噪声，并向海马体传递低熵输入。然后，我们观察感官输入时“最佳熵”水平的错觉。我们需要一个新的概念，**学习熵**，来帮助我们准确地判断信号的吸引力。学习熵需要考虑信息的高度处理，然后才能激活大脑中的奖励中心。本文稍后将讨论[学习熵](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learntropy)。
 
-## Speed of information processing
+## 信息处理速度
 
-An under-appreciated factor in sensory information scanning is the speed of information processing in the brain.
+感受信息扫描中一个被低估的因素是大脑中信息处理的速度。
 
-For every piece of music, there is a tolerable playback range where the beauty of the music is appreciated. A high speed playback can be annoying and the music may become hard to decode, as the high speed goes beyond our processing power. The same piece of music slowed down can quickly lose its appeal. The same happens in speech delivery or in classroom lecturing. For the same information and the same entropy level, we may accomplish highly different levels of signal attractiveness. There is always an optimum speed of delivery and that speed depends on all other factors that power the [learn drive](https://supermemo.guru/wiki/Learn_drive), incl. prior knowledge. As such, speed of delivery is highly individual.
+对于每一首音乐，都有一个可以接受的播放速度范围，在其范围内我们可以欣赏音乐之美。高速播放可能会很烦人，而且音乐可能变得难以解码，因为高速超出了我们的处理能力。同一首音乐如果放慢了速度，很快就会失去吸引力。演讲或课堂讲授也是如此。对于相同的信息和相同的熵水平，我们可以实现完全不同的信号吸引力水平。总是有一个最佳的传送速度，该速度取决于影响[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的所有其他因素，包括预备知识。因此，交付速度是高度个性化的。
 
-I like to listen to lectures at 1.4x speed. I use 1.3x for more ambitious pieces. I never speed up [Fareed Zakaria](https://en.wikipedia.org/wiki/Fareed_Zakaria_GPS) though, but rather relish every piece of information in this show. Students in a classroom lecture do not have a speed-up or slow-down button. Even the pause button, if available, is hard to hit as it may annoy other students.
+我喜欢以1.4倍的速度听讲座。我用1.3倍来听更有挑战性的片段。虽然我从来没有加快 [Fareed Zakaria](https://en.wikipedia.org/wiki/Fareed_Zakaria_GPS) 的速度，但是我享受这个节目中的每一条信息。课堂上的学生没有加速或减速按钮。即使是暂停按钮，如果有的话，也很难去点击，因为它可能会惹恼其他学生。
 
-In schools, all too often, the speed of delivery surpasses student's processing capacity. This results in negligible learning and high stress. There is no time to [enjoy the landscapes in the window of a high-speed train](https://supermemo.guru/wiki/Futility_of_schooling). At MIT they call it *"drinking from a firehose"*.
+在学校里，交付的速度常常超过学生的处理能力。这导致了微不足道的学习和强大的压力。没有时间[欣赏高速列车窗外的风景](https://supermemo.guru/wiki/Futility_of_schooling)。在麻省理工学院，他们称之为“[*用消防水管喝水*](https://supermemo.guru/wiki/Futility_of_schooling)”。
 
-## Probability vs. knowledge
+## 概率 与 知识
 
-Low probability events carry more information. Average information determines entropy. Prior knowledge determines the perception of an information channel's entropy.
+低概率事件携带更多信息。平均信息决定熵。预备知识决定了对信息通道的熵的感知。
 
-If you happen to tune in to radio news and you hear that "*Janet Jackson has delivered a baby*", your degree of interest will depend on the probability of the event. If you have no idea who Janet Jackson is, this is a high probability event. If some [350,000 women deliver babies every single day](http://www.theworldcounts.com/stories/How-Many-Babies-Are-Born-Each-Day), this is no longer news and is not new or interesting. The first death of a soldier in a war makes news, but when deaths incrase into the thousands, young lives become just a statistic.
+如果你碰巧收听了广播新闻，并且听到“珍妮特·杰克逊生了一个孩子”，你的兴趣程度将取决于事件发生的概率。如果你不知道珍妮特·杰克逊是谁，这是一个高概率事件。如果[每天约有35万名女性分娩](http://www.theworldcounts.com/stories/How-Many-Babies-Are-Born-Each-Day)，这已经不是新闻，也不是新鲜事或有趣的事。一名士兵在战争中的第一次死亡将成为新闻，但是当死亡人数增加到成千上万时，年轻的生命将只是一个统计数字。
 
-If you happen to know Janet Jackson or like her music, the probability of a baby delivery drops dramatically to the level of "*once in a lifetime*" (for Janet). This can make you become interested. However, if you recall Janet as a beautiful girl from some ancient sitcom, her baby delivery may go into the category of "*Impossible!*". If you realize Janet is 50 years old, and you know about menopause, you may instantly become morbidly curious about her case. Your prior knowledge determines how you respond to the message. There is no optimum entropy level for a channel. There is only an optimum entropy level that fits a specific brain. At this point you may see that we need to introduce a new derived concept, which we will [later](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learntropy) call **learntropy**. Learntropy will determine the attractiveness of a given channel for a given brain.
+如果你碰巧认识珍妮特·杰克逊或者喜欢她的音乐，那么生孩子的概率会急剧下降到“*一生一次*”的水平(对珍妮特来说)。这会让你变得有兴趣。然而，如果你记得珍妮特是古代情景喜剧中的一个漂亮女孩，她生孩子可能会被归为“*不可能！*”。如果你意识到珍妮特 50 岁了，并且你知道更年期，你可能会立刻对她的情况产生病态的好奇。你预备知识决定了你对信息的反应。信道没有最佳熵水平。只有最适合特定大脑的熵水平。在这一点上，你可能会看到，我们需要引入一个新的衍生概念，我们在[之后](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learntropy)将称之为**学习熵**。学习熵将决定一个特定的通道对一个特定的大脑的吸引力。
 
-If you love Janet-like gossip, the channel rich in that gossip will provide the right level of surprisal for you. It will provide the learntropy match. If you lack knowledge or your priorities differ, you will tune out. Your learning priorities will also determine your level of knowledge in particular areas and your response to any particular channel and its information entropy.
+如果你喜欢珍妮特式的八卦，那么这个八卦频道会给你带来恰到好处的惊奇。它将提供学习匹配。如果你缺乏相关知识或者你的优先级不同，你就会对它置之不理。你的学习重点也将决定你在特定领域的知识水平，以及你对任何特定渠道及其信息熵的反应。
 
-## Predictability and surprisal
+## 可预见性和惊奇
 
-Probability and complexity are not the only components in information perception. We seem to look for a balance between predictability and surprise. I like funk. In this type of music, the bassline is often highly predictable with the [optimum dose of syncopation](https://supermemo.guru/wiki/Impact_of_syncopation_on_the_pleasure_of_music). It makes it easy to synchronize the body motion with the rhythm. However, funk would not be interesting if it did not carry surprise. This is where the sophisticated jazz riffs tickle the neural system responsible for the detection of surprisal. In addition, after decades of learning, there is a whole database of signals that my brain responds to. There may be that one backup singer voice that I recognize and like. My brain is ready for funk.
+概率和复杂性不是信息感知的唯一组成部分。我们似乎在寻找可预测性和惊奇之间的平衡。我喜欢乡土爵士乐。在这种类型的音乐中，低音部通常是高度可预测的，伴着[最佳的切分音数量](https://supermemo.guru/wiki/Impact_of_syncopation_on_the_pleasure_of_music)。这使得身体运动与节奏同步变得容易。然而，如果没有惊奇，乡土爵士乐就不会有意思。在这里，复杂的爵士乐即兴表演会刺激负责检测“惊奇”的神经系统。此外，经过几十年的学习，我的大脑有一个完整的信号数据库。可能有一个我认识并喜欢的伴唱歌手的声音。我的大脑已经准备好迎接乡土爵士乐了。
 
-I love Ken Robinson lectures on creativity. In one way, they are highly predictable. I totally agree with Robinson, so you can say that Robinson feeds my confirmation bias. This is pleasurable. When people agree with us, we like to say "*great minds think alike*". But if Robinson just kept repeating the same dry mantras on how schools kill creativity, he would lose his appeal. Entropy can be interpreted as the average expected [surprisal](https://en.wikipedia.org/wiki/Self-information). Robinson's delivery carries a great deal of nice surprises. He may paint the same models in a different and unusually creative way. As a result, **the brain receives new information, produces a generalization, and confirms the existing models**. Generalizations derived from new contexts increase [knowledge coherence](https://supermemo.guru/wiki/Knowledge_coherence). This a very pleasing type of complementarity in a message based on a known model.
+我喜欢肯·罗宾逊关于创造力的讲座。在某种程度上，它们是高度可预测的。我完全同意罗宾逊，所以你可以说罗宾逊助长了我的证实性偏见。这很愉快。当人们与我们观点一致时，我们喜欢说“英雄所见略同”。但是，如果罗宾逊继续重复同样陈腔滥调，讲述学校如何扼杀创造力，他将失去吸引力。熵可以解释为平均预期[惊奇](https://en.wikipedia.org/wiki/Self-information)。罗宾逊的交付带来了很多惊奇。他可能会以不同的、不同寻常的创造性方式描绘相同的模型。因此，[大脑接收新的信息，产生概括，并确认现有的模型。](https://en.wikipedia.org/wiki/Self-information)从新的语境中得出的概括可以增强[知识的一致性](https://supermemo.guru/wiki/Knowledge_coherence)。在基于已知模型的消息中，这是一种非常令人愉快的补充。
 
-Robinson lectures find a good balance between predictability and surprise.
+罗宾逊的讲座在可预测性和惊奇之间找到了很好的平衡。
 
-The most pleasing information channels will keep delivering surprises that confirm existing models and arm them in new semantic twigs on which new knowledge can be built. A surprise that destroys existing models may not be pleasing at first, but may lead to a highly pleasing revolution in thinking.
+最令人愉快的信息渠道将不断提供惊奇，证实现有的模型，并在新的语义分支中武装它们，在这些分支上可以建立新的知识。一个破坏现有模型的惊奇起初可能并不令人愉快，但可能会导致一场非常令人愉快的思维革命。
 
-Metaphorically, you can imagine this as the information channel massaging your tree of knowledge and adding new branches like a potter who adds [new layers of clay](https://supermemo.guru/wiki/Jigsaw_puzzle_metaphor) to his perfectly shaped creation.
+打个比方，你可以想象这是一个信息渠道，修剪你的知识之树，并添加新的分支，就像一个陶工在他完美塑造的作品上添加[新的粘土层](https://supermemo.guru/wiki/Jigsaw_puzzle_metaphor)一样。
 
-## Detecting surprisal
+## 探测惊奇
 
-Human [learn drive](https://supermemo.guru/wiki/Learn_drive) is based on detecting [surprisal](https://en.wikipedia.org/wiki/Self-information). We have known that for ages. All models of human and machine learning involve that concept under different names. [Piaget](https://en.wikipedia.org/wiki/Jean_Piaget) wrote about [schemata](https://en.wikipedia.org/wiki/Jean_Piaget#Schema) that fall into disequilibrium under the impact of surprisal. In his models of the neocortex, [Jeff Hawkins](https://en.wikipedia.org/wiki/Jeff_Hawkins) speaks of prediction errors that underlie learning and intelligence. I like to speak of models, and their elaboration (when new information fits the model), or contradiction (when new information requires changes to the model).
+人类的[学习内驱力](https://supermemo.guru/wiki/Learn_drive)是基于对[惊奇](https://en.wikipedia.org/wiki/Self-information)的探测。我们已经知道这一点很久了。人类和机器学习模型都以不同的名称涉及到这个概念。[皮亚杰](https://en.wikipedia.org/wiki/Jean_Piaget)写过，[图式](https://en.wikipedia.org/wiki/Jean_Piaget#Schema)在惊奇的影响下陷入失调。[杰夫·霍金斯](https://en.wikipedia.org/wiki/Jeff_Hawkins)在他的新大脑皮层模型中谈到了基于学习和智力的预测错误。我喜欢谈论模型，以及它们的细化(当新数据适合模型时)，或者矛盾(当新数据需要改变模型时)。
 
-For the reward of learning, a new surprising piece of information needs to fit pre-existing knowledge (models, schemata, predictions, or so). For the reward to be delivered, neural processing is necessary. Information on the input needs to be processed and compared with information stored in the brain. One of the chief processors of input information in the brain is the hippocampus. It is the brain's information switchboard that is able to compare the input with prior knowledge.
+为了获得学习的奖励，一个新的令人惊奇的信息需要与预先存在的知识(模型、图式、预测等等)相容。为了获得奖励，神经处理是必要的。关于输入的信息需要被处理，并与存储在大脑中的信息进行比较。大脑输入信息的主要处理器之一是海马体。大脑的信息交换台能够将输入与先前的知识进行比较。
 
-Measuring the entropy of the visual stream is not necessarily a reliable indicator of the pleasing power of the information channel. All information streamed to the hippocampus undergoes a high degree of processing. A stream of pixels representing a beautiful beach will be processed into a series of shapes and textures. Those in turn will model palms, sand, and the sea. This highly compressed simple information will determine the original response to the information input.
+视觉流的熵的测量不一定是信息通道令人愉悦的能力的可靠指标。流向海马体的所有信息都经过高度处理。代表美丽海滩的像素流将被加工成一系列形状和纹理。反过来，这些模型将依次模拟棕榈树、沙子和大海。这种高度压缩的简单信息将决定对信息输入的最初响应。
 
-Scanning for information in the environment is equivalent to scanning for scents of food. The scent is enticing, but only the actual feeding is a true reward. This is why entropy scanning does not need to be rewarding. All it needs to do is to lead to a reward. The anterior hippocampus responds to entropy, as noticed earlier, however experimental design made sure that the entropy refers to the combination of simple shapes that do not lose much information during input processing. Instead of speaking of signal entropy, we should rather focus on the input entropy at the information comparator such as the hippocampus. It is not the retinal pixels that matter, but the shape of the palm as represented on the comparator input. For the comparator, the high entropy pattern of grayness or static noise will not differ from whiteness or silence. They will all bring the same entropy on input: zero. This is why I used the term [learntropy](https://supermemo.guru/wiki/Learntropy)to accurately refer to the attractiveness of the information channel.
+扫描环境中的信息如同扫描食物的气味。气味很诱人，但只有实际去吃才是真正的回报。这就是熵扫描不需要回报的原因。它所需要做的就是获得奖励。如前所述，前海马对熵有反应，然而实验设计确保熵是指输入过程中不会丢失太多信息的简单形状的组合。与其说是信号熵，不如说是信息比较器(如海马)的输入熵。重要的不是视网膜像素，而是比较器输入上表示的手掌形状。对于比较器来说，灰度或静态噪声的高熵模式与白度或静音没有区别。它们在输入时都会带来相同的熵:零。这就是为什么我用“[学习熵](https://supermemo.guru/wiki/Learntropy)”这个词来准确地描述信息渠道的吸引力。
 
-The anterior hippocampus that responds to signal entropy is famous for the discovery of the Halle Berry neuron (see [more](http://phys.org/news/2005-06-single-cell-recognition-halle-berry-neuron.html)). Using electrodes implanted in a consenting epilepsy patient, researchers were able to pinpoint a single neuron consistently responding to images of Halle Berry in various contexts. The same neuron would also respond to Halle Berry's name. At the same time, posterior hippocampus might respond less consistently to Jennifer Aniston (perhaps an indication of a preceding layer of neural processing).
+响应信号熵的前海马体因发现哈莉•贝瑞神经元而闻名(见[更多](http://phys.org/news/2005-06-single-cell-recognition-halle-berry-neuron.html))。研究人员将电极植入一名同意接受治疗的癫痫患者体内，发现在不同情境下，单个神经元对哈莉•贝瑞(Halle Berry)图像的反应是一致的。同样的神经元也会对哈莉·贝瑞的名字做出反应。与此同时，后海马体对詹妮弗·安妮斯顿的反应可能不那么一致(这可能是前一层神经处理的迹象)。
 
 Most of us have no idea how Halle Berry smells and her smell might not be unique enough to activate Halle Berry neuron in the hippocampus, however, even the smell signal can get there fast via just a few synapses in the olfactory bulb, olfactory tubercle, piniform cortex, and the entorhinal cortex (see picture). However, if one could hear the sound of Halle's voice, it might meet the sound signal in the olfactory tubercle, contribute to recognition, and result in the subsequent activation of the Halle neuron in the hippocampus or further down in the neocortex.
 
